# rules_tf

./: .gitignore  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md
tf/: BUILD.bazel  defs.bzl  extensions.bzl  toolchains.bzl  utils.bzl
tf/rules/: BUILD.bazel  apply.bzl  apply.sh.tpl  bin.bzl  bin.sh.tpl  binary.bzl  fmt.bzl  init.bzl  init.sh.tpl  plan.bzl  plan.sh.tpl  providers.bzl  validate.bzl  validate.sh.tpl
tf/toolchains/terraform/: BUILD.bazel  BUILD.toolchain.tpl  toolchain.bzl
