load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:public"],
)

license(
    name = "license",
    license_kinds = [
        "@rules_license//licenses/spdx:Apache-2.0",
    ],
    license_text = "LICENSE",
)

toolchain_type(
    name = "tf_toolchain_type",
    visibility = ["//visibility:public"],
)

buildifier(
    name = "lint",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    mode = "fix",
    tags = ["manual"],
)

buildifier(
    name = "lint_check",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
    tags = ["manual"],
)
